---
source: crates/ruff_linter/src/rules/flake8_datetimez/mod.rs
---
DTZ004.py:4:1: DTZ004 (call-datetime-utcfromtimestamp) `datetime.datetime.utcfromtimestamp()` used
  |
3 | # qualified
4 | datetime.datetime.utcfromtimestamp(1234)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ DTZ004 (call-datetime-utcfromtimestamp)
5 |
6 | from datetime import datetime
  |
  = help: Use `datetime.datetime.fromtimestamp(ts, tz=...)` instead

DTZ004.py:9:1: DTZ004 (call-datetime-utcfromtimestamp) `datetime.datetime.utcfromtimestamp()` used
   |
 8 | # unqualified
 9 | datetime.utcfromtimestamp(1234)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ DTZ004 (call-datetime-utcfromtimestamp)
10 |
11 | # uses `astimezone` method
   |
   = help: Use `datetime.datetime.fromtimestamp(ts, tz=...)` instead
